# seriald

./: .gitignore  CMakeLists.txt  README.md  fdio.c  seriald.c  seriald.h  strutils.c  strutils.h  term.c  ubus.c  ubus.h  ubus_loop.c  ubus_loop.h
